Add Marmut dashboard dan tambah register label (pengguna belum)

--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -12,13 +12,21 @@
                 <div class="row">
                     <form control="" class="form-group">
                         <div class="row">
-                            <input type="text" name="username" id="username" class="form__input" placeholder="Username">
+                            <input type="text" name="username" id="email" class="form__input" placeholder="Email">
                         </div>
                         <div class="row">
                             <input type="password" name="password" id="password" class="form__input" placeholder="Password">
                         </div>
                         <div class="row">
-                            <input type="submit" value="Submit" class="btn">
+                            <input type="password" name="password" id="nama" class="form__input" placeholder="Nama">
+                        </div>
+                        <div class="row">
+                            <input type="password" name="password" id="kontak" class="form__input" placeholder="Kontak">
+                        </div>
+                        <div class="row">
+                            <div class="row btn-container">
+                                <input type="submit" value="Submit" class="btn">
+                            </div>
                         </div>
                     </form>
                 </div>
