Add register pembeli

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -10,9 +10,9 @@
     <div class="col-md-8 col-xs-12 col-sm-12 login_form ">
       <div class="container-fluid">
         <div class="row btn-container">
-          <h2>Marmut</h2>
+          <h2>Marmut - A11</h2>
           <a href="{% url 'authentication:login' %}"><input type="submit" value="Login" class="btn"></a>
-          <a href="{% url 'authentication:register' %}"><input type="submit" value="Register" class="btn"></a>
+          <a href="{% url 'authentication:pilih_register' %}"><input type="submit" value="Register" class="btn"></a>
         </div>
       </div>
     </div>
