--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,11 @@
 .row > h2{
 	color:#996f59;
 }
+label, span, input {
+    text-align: left; /* Align labels to the left */
+    display: inline-block;
+    justify-content: left;
+}
 .login_form{
 	background-color: #fff;
 	border-top-right-radius:20px;
@@ -44,7 +49,6 @@
     border: 1px solid #ccc;
     border-radius: 20px;
     justify-content: center;
-    color: #fff;
 }
 form{
 	padding: 0 2em;
