--- a/production_static/style.css
+++ b/production_static/style.css
@@ -90,10 +90,15 @@ form{
 	background-color: #996f59;
 	color:#fff;
 }
+
 .login-card-img{
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
     width: 70%;
     height: auto;
+}
+
+.fc-primary {
+    color: #996f59;
 }
