--- a/static/style.css
+++ b/static/style.css
@@ -97,3 +97,25 @@ form{
     width: 70%;
     height: auto;
 }
+
+.btn-red {
+    border: 1px solid #cc0000; /* Darker red border */
+	color:#cc0000;
+}
+
+.btn-red:hover {
+    background-color: #ff0000;  /* Red background */
+    color: #ffffff;            /* White text */
+    border: 1px solid #cc0000; /* Darker red border */
+}
+
+.btn-blue {
+    border: 1px solid #0004ff; /* Darker red border */
+	color:#0004ff;
+}
+
+.btn-blue:hover {
+    background-color: #0004ff;  /* Red background */
+    color: #ffffff;            /* White text */
+    border: 1px solid #0004ff; /* Darker red border */
+}
