fix list podcast

--- a/podcast/templates/createEpisode.html
+++ b/podcast/templates/createEpisode.html
@@ -5,7 +5,7 @@
 <div>
     <div class="p-3 rounded w-50 m-auto bg-white fc-primary">
         <div class="pb-3">
-            <h1 class="fw-bold">Buat Podcast</h1>
+            <h1 class="fw-bold">Buat Episode</h1>
         </div>
         <div>
             <div class="mb-2 row">
