--- a/podcast/templates/listPodcast.html
+++ b/podcast/templates/listPodcast.html
@@ -3,18 +3,35 @@
 
 {% block content %}
 <div>
-    <div class="p-3 rounded w-50 m-auto bg-white" style="color: #996f59;">
+    <div class="p-3 rounded w-50 m-auto bg-white fc-primary">
         <div class="pb-3">
             <h1 class="fw-bold">List Podcast</h1>
         </div>
         <div>
-            <div class="card mb-3" style="color: #7c5844;">
+            <div class="card mb-3fc-primary">
+                <div class="row g-0">
+                  <div class="col-md-12">
+                    <div class="card-body d-flex justify-content-between gap-5 ">
+                        <div class="fc-primary w-100">
+                            <h5 class="card-title fw-semibold ">Stuff You Should Know</h5>
+                            <p class="card-text">Explore fascinating facts and intriguing topics in a digestible format, making learning both easy and entertaining.</p>
+                            <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 30%;">Lihat Episode</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-blue m-0 mb-2" style="border-radius: 10px; width: 100%;">Tambah Episode</button>
+                            <button type="button" class="btn btn-red m-0" style="border-radius: 10px; width: 100%;">Hapus</button>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="card mb-3fc-primary">
                 <div class="row g-0">
                   <div class="col-md-12">
                     <div class="card-body d-flex justify-content-between gap-5">
-                        <div>
-                        <h5 class="card-title fw-semibold">Stuff You Should Know</h5>
-                        <p class="card-text">Explore fascinating facts and intriguing topics in a digestible format, making learning both easy and entertaining.</p>
+                        <div class="fc-primary w-100">
+                        <h5 class="card-title fw-semibold">Who Trolled Amber</h5>
+                        <p class="card-text">Dive into the investigation of digital harassment and its impacts, centered around the story of Amber.</p>
                         <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 30%;">Lihat Episode</button>
                         </div>
                         <div>
@@ -25,30 +42,13 @@
                   </div>
                 </div>
             </div>
-            <div class="card mb-3" style="color: #7c5844;">
+            <div class="card mb-3 fc-primary">
                 <div class="row g-0">
                   <div class="col-md-12">
                     <div class="card-body d-flex justify-content-between gap-5">
-                        <div>
-                        <h5 class="card-title fw-semibold">Stuff You Should Know</h5>
-                        <p class="card-text">Explore fascinating facts and intriguing topics in a digestible format, making learning both easy and entertaining.</p>
-                        <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 30%;">Lihat Episode</button>
-                        </div>
-                        <div>
-                            <button type="button" class="btn btn-blue m-0 mb-2" style="border-radius: 10px; width: 100%;">Tambah Episode</button>
-                            <button type="button" class="btn btn-red m-0" style="border-radius: 10px; width: 100%;">Hapus</button>
-                        </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-            <div class="card mb-3" style="color: #7c5844;">
-                <div class="row g-0">
-                  <div class="col-md-12">
-                    <div class="card-body d-flex justify-content-between gap-5">
-                        <div>
-                        <h5 class="card-title fw-semibold">Stuff You Should Know</h5>
-                        <p class="card-text">Explore fascinating facts and intriguing topics in a digestible format, making learning both easy and entertaining.</p>
+                        <div class="fc-primary w-100">
+                        <h5 class="card-title fw-semibold">Welcome to Your Fantasy</h5>
+                        <p class="card-text">Step back into the 1980s and uncover the hidden history and scandalous truths behind the Chippendales’ empire.</p>
                         <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 30%;">Lihat Episode</button>
                         </div>
                         <div>
