add create episode page

--- a/podcast/templates/createEpisode.html
+++ b/podcast/templates/createEpisode.html
@@ -6,6 +6,7 @@
     <div class="p-3 rounded w-50 m-auto bg-white fc-primary">
         <div class="pb-3">
             <h1 class="fw-bold">Buat Episode</h1>
+            <h3 class="fw-bold">Podcast: Stuff You Should Know</h3>
         </div>
         <div>
             <div class="mb-2 row">
@@ -15,14 +16,9 @@
                 </div>
             </div>
             <div class="mb-2 row">
-                <label class="col-sm-1 col-form-label fw-semibold">Genre</label>
+                <label class="col-sm-1 col-form-label fw-semibold">Deskripsi</label>
                 <div class="col-sm-11">
-                <select class="form-select fc-primary">
-                    <option selected>Pilih Genre</option>
-                    <option value="1" >Horror</option>
-                    <option value="2">Thriller</option>
-                    <option value="3">Romance</option>
-                  </select>
+                    <textarea class="form-control" rows="2" aria-label="textarea"></textarea>
                 </div>
             </div>
             <div class="mb-2 row">
@@ -33,7 +29,7 @@
             </div>
             <div class="mb-2 row">
                 <div class="col-sm-12 d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary">Buat Podcast</button>
+                    <button type="button" class="btn btn-primary">Buat Episode</button>
                 </div>
             </div>
         </div>
