add list episode page

--- a/podcast/templates/listPodcast.html
+++ b/podcast/templates/listPodcast.html
@@ -8,11 +8,11 @@
             <h1 class="fw-bold">List Podcast</h1>
         </div>
         <div>
-            <div class="card mb-3fc-primary">
+            <div class="card mb-3 fc-primary">
                 <div class="row g-0">
                   <div class="col-md-12">
                     <div class="card-body d-flex justify-content-between gap-5 ">
-                        <div class="fc-primary w-100">
+                        <div class="w-100">
                             <h5 class="card-title fw-semibold ">Stuff You Should Know</h5>
                             <p class="card-text">Explore fascinating facts and intriguing topics in a digestible format, making learning both easy and entertaining.</p>
                             <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 30%;">Lihat Episode</button>
@@ -25,11 +25,11 @@
                   </div>
                 </div>
             </div>
-            <div class="card mb-3fc-primary">
+            <div class="card mb-3 fc-primary">
                 <div class="row g-0">
                   <div class="col-md-12">
                     <div class="card-body d-flex justify-content-between gap-5">
-                        <div class="fc-primary w-100">
+                        <div class="w-100">
                         <h5 class="card-title fw-semibold">Who Trolled Amber</h5>
                         <p class="card-text">Dive into the investigation of digital harassment and its impacts, centered around the story of Amber.</p>
                         <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 30%;">Lihat Episode</button>
@@ -46,7 +46,7 @@
                 <div class="row g-0">
                   <div class="col-md-12">
                     <div class="card-body d-flex justify-content-between gap-5">
-                        <div class="fc-primary w-100">
+                        <div class="w-100">
                         <h5 class="card-title fw-semibold">Welcome to Your Fantasy</h5>
                         <p class="card-text">Step back into the 1980s and uncover the hidden history and scandalous truths behind the Chippendales’ empire.</p>
                         <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 30%;">Lihat Episode</button>
