--- a/podcast/templates/detailPodcast.html
+++ b/podcast/templates/detailPodcast.html
@@ -8,7 +8,7 @@
             <h1 class="fw-bold">Podcast Detail</h1>
             <h3 class="fw-bold mb-0">Stuff You Should Know</h3>
         </div>
-        <div class="d-flex gap-1 flex-column">
+        <div class="d-flex gap-1 flex-column m-0">
             <div class="d-flex flex-column">
                 <p class="fw-semibold m-0">Genre:</p> 
                 <div class="d-flex gap-1">
@@ -23,9 +23,10 @@
                 <p class="fw-semibold m-0">Total Durasi:</p> <p class="m-0">1 Jam 52 Menit</p>
             </div>
             <div class="d-flex gap-2">
-                <p class="fw-semibold mb-0">Tanggal Rilis: </p><p>12/12/2023</p>
+                <p class="fw-semibold mb-0">Tanggal Rilis: </p><p class="m-0">12/12/2023</p>
             </div>
         </div>
+        <button type="button" class="btn btn-primary" style="border-radius: 10px; width: 10%;">Kembali</button>
         <div>
             <div>
                 <h3 class="fw-bold">Daftar Episode</h3>
