--- a/chart/templates/listChart.html
+++ b/chart/templates/listChart.html
@@ -4,9 +4,12 @@
 {% block content %}
 <div class="my-2 mx-5 fc-primary">
     <div>
-        <div class="pb-3">
-            <h1 class="fw-bold">Chart List</h1>
+        <div class="">
+            <h1 class="fw-bold mb-0">Chart List</h1>
         </div> 
+        
+        <button type="button" class="btn btn-primary my-3" style="border-radius: 10px; width: 10%;">Kembali</button>
+        
     </div>
     <div class="d-flex gap-3"> 
         <div class="card" style="width: 18rem;">
