--- a/chart/templates/detailChart.html
+++ b/chart/templates/detailChart.html
@@ -91,8 +91,10 @@
                 <button type="button" class="btn m-0" style="border-radius: 10px; width: 100%;">Lihat</button>
             </div>
         </div>
-        <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 10%;">Kembali</button>
+        <div>
+            <a href="{% url 'chart:list_chart' %}" class="w-100 d-flex justify-content-center">
+                <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 10%;">Kembali</button>
+            </a>
         </div>
         
     </div>
