--- a/user/templates/langganan_paket.html
+++ b/user/templates/langganan_paket.html
@@ -6,10 +6,10 @@
     <div class="container mt-5">
         <div class="row justify-content-between align-items-center mb-4">
             <div class="col-md-auto">
-                <h1>Langganan Paket</h1>
+                <h1 class="text-center">Langganan Paket</h1>
             </div>
             <div class="col-md-auto">
-                <a href="" class="text-decoration-none font-weight-bold">Riwayat Transaksi</a>
+                <a href="{% url 'user:riwayat_transaksi' %}" class="text-decoration-none font-weight-bold">Riwayat Transaksi</a>
             </div>
         </div>
         <div class="row">
@@ -18,7 +18,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Paket 1 Bulan</h5>
                         <p class="card-text">Rp 54.900</p>
-                        <button class="btn btn-primary">Langganan Sekarang</button>
+                        <a href="{% url 'user:pembayaran_paket' %}" class="btn btn-primary">Langganan Sekarang</a>
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Paket 3 Bulan</h5>
                         <p class="card-text">Rp 164.700</p>
-                        <button class="btn btn-primary">Langganan Sekarang</button>
+                        <a href="{% url 'user:pembayaran_paket' %}" class="btn btn-primary">Langganan Sekarang</a>
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Paket 6 Bulan</h5>
                         <p class="card-text">Rp 329.400</p>
-                        <button class="btn btn-primary">Langganan Sekarang</button>
+                        <a href="{% url 'user:pembayaran_paket' %}" class="btn btn-primary">Langganan Sekarang</a>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Paket 1 Tahun</h5>
                         <p class="card-text">Rp 658.800</p>
-                        <button class="btn btn-primary">Langganan Sekarang</button>
+                        <a href="{% url 'user:pembayaran_paket' %}" class="btn btn-primary">Langganan Sekarang</a>
                     </div>
                 </div>
             </div>
