--- a/user/templates/riwayat_transaksi.html
+++ b/user/templates/riwayat_transaksi.html
@@ -4,48 +4,30 @@
 {% block content %}
     <!-- Content -->
     <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-8">
-                <h1>Langganan Paket</h1>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Paket Basic</h5>
-                                <p class="card-text">Deskripsi Paket Basic.</p>
-                                <button class="btn btn-primary">Langganan Sekarang</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Paket Standard</h5>
-                                <p class="card-text">Deskripsi Paket Standard.</p>
-                                <button class="btn btn-primary">Langganan Sekarang</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Paket Premium</h5>
-                                <p class="card-text">Deskripsi Paket Premium.</p>
-                                <button class="btn btn-primary">Langganan Sekarang</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Riwayat Transaksi</h5>
-                        <p class="card-text">Lihat riwayat transaksi langganan paket Anda.</p>
-                        <a href="#" class="btn btn-info">Lihat Riwayat</a>
-                    </div>
-                </div>
-            </div>
+        <h2 class="text-center">RIWAYAT TRANSAKSI PAKET</h2>
+        <table class="table table-bordered mt-4">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Jenis</th>
+                    <th scope="col">Tanggal Dimulai</th>
+                    <th scope="col">Tanggal Berakhir</th>
+                    <th scope="col">Metode Pembayaran</th>
+                    <th scope="col">Nominal</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1 Bulan</td>
+                    <td>8 April 2024, 23:00</td>
+                    <td>8 Mei 2024, 23:00</td>
+                    <td>E-Wallet</td>
+                    <td>Rp54.900</td>
+                </tr>
+                <!-- Tambahkan baris untuk setiap transaksi di sini -->
+            </tbody>
+        </table>
+        <div class="text-center mt-4">
+            <a style="width: 20%;" href="{% url 'user:langganan_paket' %}" class="btn btn-primary">Kembali</a>
         </div>
     </div>
 {% endblock content %}
