--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -37,7 +37,7 @@
                         <a href="{%url 'user:langganan_paket'%}"class="nav-link" href="#">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
+                        <a href="{%url 'dashboard:search_bar'%}"class="nav-link" href="#">Search for Content</a>
                     </li>
                 </ul>
             </div>
