--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -39,6 +39,15 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Disabled</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'album:album' %}">Album</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'song:song' %}">Song</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'royalti:royalti' %}">Royalti</a>
+                    </li>
                 </ul>
             </div>
             <ul class="navbar-nav ml-auto">
