--- a/album/templates/albumLabel.html
+++ b/album/templates/albumLabel.html
@@ -14,35 +14,29 @@
                         <tbody>
                         <tr class="border-996f59-4 transition duration-300 ease-in-out bg-shark-700">
                             <td class="whitespace-nowrap px-6 py-4">Judul</td>
-                            <td class="whitespace-nowrap px-6 py-4">Label</td>
                             <td class="whitespace-nowrap px-6 py-4">Jumlah Lagu</td>
                             <td class="whitespace-nowrap px-6 py-4">Total Durasi</td>
                             <td class="whitespace-nowrap px-6 py-4">Action</td>
                         </tr>
                         <tr class="border transition duration-300 ease-in-out bg-shark-700 border-996f59">
                             <td class="whitespace-nowrap px-6 py-4">Album1</td>
-                            <td class="whitespace-nowrap px-6 py-4">LabelA</td>
                             <td class="whitespace-nowrap px-6 py-4">0</td>
                             <td class="whitespace-nowrap px-6 py-4">0 menit</td>
                             <td class="whitespace-nowrap px-6 py-4">
                                 <a href="{% url 'song:song' %}"><input type="submit" value="Lihat Daftar Lagu" class="btn"></a>
-                                <a href="{% url 'song:create_song' %}"><input type="submit" value="Tambah Lagu" class="btn"></a>
                                 <a href="#"><input type="submit" value="Hapus" class="btn"></a>
                             </td>
                         </tr>
                         <tr class="border transition duration-300 ease-in-out bg-shark-700 border-996f59">
                             <td class="whitespace-nowrap px-6 py-4">Album2</td>
-                            <td class="whitespace-nowrap px-6 py-4">LabelB</td>
-                            <td class="whitespace-nowrap px-6 py-4">0</td>
+                            <td class="whitespace-nowrap px-6 py-4">2</td>
                             <td class="whitespace-nowrap px-6 py-4">4 menit</td>
                             <td class="whitespace-nowrap px-6 py-4">
                                 <a href="{% url 'song:song' %}"><input type="submit" value="Lihat Daftar Lagu" class="btn"></a>
-                                <a href="{% url 'song:create_song' %}"><input type="submit" value="Tambah Lagu" class="btn"></a>
                                 <a href="#"><input type="submit" value="Hapus" class="btn"></a>
                             </td>
                         </tr>
                         <tr class="border transition duration-300 ease-in-out bg-shark-700 border-996f59">
-                            <td class="whitespace-nowrap px-6 py-4">...</td>
                             <td class="whitespace-nowrap px-6 py-4">...</td>
                             <td class="whitespace-nowrap px-6 py-4">...</td>
                             <td class="whitespace-nowrap px-6 py-4">...</td>
@@ -51,7 +45,7 @@
                     </table>
                     <div class="row btn-container">
                         <a href="{% url 'album:create_album' %}"><input type="submit" value="Create Album" class="btn"></a>
-                </div> <a href="{% url 'album:album_label' %}"><input type="submit" value="Album Label(Temp)" class="btn"></a>
+                    </div>
                 </div>
             </div>
         </div>
