--- a/album/templates/albumLabel.html
+++ b/album/templates/albumLabel.html
@@ -9,6 +9,7 @@
                 <div class="row">
                     <h2>List Album</h2>
                 </div>
+                <br>
                 <div class="row">
                     <table class="min-w-full text-sm font-dark overflow-hidden" style="color:#996f59">
                         <tbody>
@@ -58,6 +59,11 @@
     border-width: 2px;
     border-color: #996f59;
 }
+
+.btn {
+    width:50%;
+    margin: 0.5em;
+    }
 </style>
 
 {% endblock content %}
