--- a/song/templates/song.html
+++ b/song/templates/song.html
@@ -9,6 +9,7 @@
                 <div class="row">
                     <h2>Daftar Lagu pada Album1</h2>
                 </div>
+                <br>
                 <div class="row">
                     <table class="min-w-full text-sm font-dark overflow-hidden" style="color:#996f59; border-color: #996f59; border-width: 4px;">
                         <tbody>
@@ -25,7 +26,7 @@
                             <td class="whitespace-nowrap px-6 py-4">3</td>
                             <td class="whitespace-nowrap px-6 py-4">0</td>
                             <td class="whitespace-nowrap px-6 py-4">
-                                <a href="#"><input type="submit" value="Lihat Detail" class="btn"></a>
+                                <a href="#"><input type="submit" value="Lihat Detail" class="btn"></a> <br>
                                 <a href="#"><input type="submit" value="Hapus" class="btn"></a>
                             </td>
                         </tr>
@@ -35,7 +36,7 @@
                             <td class="whitespace-nowrap px-6 py-4">2</td>
                             <td class="whitespace-nowrap px-6 py-4">2</td>
                             <td class="whitespace-nowrap px-6 py-4">
-                                <a href="#"><input type="submit" value="Lihat Detail" class="btn"></a>
+                                <a href="#"><input type="submit" value="Lihat Detail" class="btn"></a> <br>
                                 <a href="#"><input type="submit" value="Hapus" class="btn"></a>
                             </td>
                         </tr>
@@ -61,6 +62,11 @@
     border-width: 2px;
     border-color: #996f59;
 }
+
+.btn {
+    width:40%;
+    margin: 0.5em;
+    }
 </style>
 
 {% endblock content %}
