connect to database

--- a/podcast/templates/createPodcast.html
+++ b/podcast/templates/createPodcast.html
@@ -19,9 +19,12 @@
                 <div class="col-sm-11">
                 <select class="form-select fc-primary">
                     <option selected>Pilih Genre</option>
-                    <option value="1" >Horror</option>
-                    <option value="2">Thriller</option>
-                    <option value="3">Romance</option>
+                    <option value="1" >True Crime</option>
+                    <option value="2">Personal Stories</option>
+                    <option value="3">Culture</option>
+                    <option value="4" >Society</option>
+                    <option value="5">Sports</option>
+                    <option value="6">Culture</option>
                   </select>
                 </div>
             </div>
