--- a/podcast/templates/detailPodcast.html
+++ b/podcast/templates/detailPodcast.html
@@ -55,10 +55,10 @@
                       <div class="col-md-12">
                         <div class="card-body d-flex justify-content-between gap-5">
                             <div class="w-100">
-                                <h5 class="card-title fw-semibold ">The Hidden World of Subterranean Cities</h5>
+                                <h5 class="card-title fw-semibold ">Reflections on Growing Up</h5>
                                 <p class="card-text">Dive deep into the earth as we explore the fascinating and mysterious subterranean cities around the world. From the ancient underground city of Derinkuyu in Turkey to the bustling below-surface complex of Montreal.</p>
                                 <div class="d-flex gap-2">
-                                    <p class="fw-semibold mb-0">Durasi:</p> <p class="mb-0">52 Menit</p>
+                                    <p class="fw-semibold mb-0">Durasi:</p> <p class="mb-0">30 Menit</p>
                                 </div>
                                 <div class="d-flex gap-2">
                                     <p class="fw-semibold m-0"> Tanggal: </p><p class="m-0">12/12/2023</p>
