--- a/podcast/templates/detailPodcast.html
+++ b/podcast/templates/detailPodcast.html
@@ -6,24 +6,23 @@
     <div class="p-3 rounded w-75 m-auto bg-white fc-primary">
         <div class="pb-3">
             <h1 class="fw-bold">Podcast Detail</h1>
-            <h3 class="fw-bold mb-0">Stuff You Should Know</h3>
+            <h3 class="fw-bold mb-0">{{judul}}</h3>
         </div>
         <div class="d-flex gap-1 flex-column m-0">
             <div class="d-flex flex-column">
                 <p class="fw-semibold m-0">Genre:</p> 
                 <div class="d-flex gap-1">
-                    <p class="m-0 border rounded px-2 py-1">Horror</p>
-                    <p class="m-0 border rounded px-2 py-1">Thriller</p>
+                    <p class="m-0 border rounded px-2 py-1">{{genre}}</p>
                 </div>
             </div>
             <div class="d-flex gap-2">
-                <p class="fw-semibold m-0">Podcaster: </p><p class="m-0">Nadhira Raihana</p>
+                <p class="fw-semibold m-0">Podcaster: </p><p class="m-0">{{nama}}</p>
             </div>
             <div class="d-flex gap-2">
-                <p class="fw-semibold m-0">Total Durasi:</p> <p class="m-0">1 Jam 52 Menit</p>
+                <p class="fw-semibold m-0">Total Durasi:</p> <p class="m-0">{{durasi}}</p>
             </div>
             <div class="d-flex gap-2">
-                <p class="fw-semibold mb-0">Tanggal Rilis: </p><p class="m-0">12/12/2023</p>
+                <p class="fw-semibold mb-0">Tanggal Rilis: </p><p class="m-0">{{tanggal_rilis}}</p>
             </div>
         </div>
         <button type="button" class="btn btn-primary" style="border-radius: 10px; width: 10%;">Kembali</button>
@@ -32,45 +31,32 @@
                 <h3 class="fw-bold">Daftar Episode</h3>
             </div>
             <div>
+                {% for eps in episodes %}
                 <div class="card mb-3 fc-primary">
                     <div class="row g-0">
                       <div class="col-md-12">
                         <div class="card-body d-flex justify-content-between gap-5">
                             <div class="w-100">
-                                <h5 class="card-title fw-semibold ">The Hidden World of Subterranean Cities</h5>
-                                <p class="card-text">Dive deep into the earth as we explore the fascinating and mysterious subterranean cities around the world. From the ancient underground city of Derinkuyu in Turkey to the bustling below-surface complex of Montreal.</p>
+                                <h5 class="card-title fw-semibold ">{{eps.episode_judul}}</h5>
+                                <p class="card-text">{{eps.deskripsi}}</p>
                                 <div class="d-flex gap-2">
-                                    <p class="fw-semibold mb-0">Durasi:</p> <p class="mb-0">52 Menit</p>
+                                    <p class="fw-semibold mb-0">Durasi:</p> <p class="mb-0">{{eps.episode_durasi}} Menit</p>
                                 </div>
                                 <div class="d-flex gap-2">
-                                    <p class="fw-semibold m-0"> Tanggal: </p><p class="m-0">12/12/2023</p>
+                                    <p class="fw-semibold m-0"> Tanggal: </p><p class="m-0">{{eps.episode_tanggal_rilis}}</p>
                                 </div>
                             </div>
                         </div>
                       </div>
                     </div>
                 </div>
-                <div class="card mb-3 fc-primary">
-                    <div class="row g-0">
-                      <div class="col-md-12">
-                        <div class="card-body d-flex justify-content-between gap-5">
-                            <div class="w-100">
-                                <h5 class="card-title fw-semibold ">Reflections on Growing Up</h5>
-                                <p class="card-text">Dive deep into the earth as we explore the fascinating and mysterious subterranean cities around the world. From the ancient underground city of Derinkuyu in Turkey to the bustling below-surface complex of Montreal.</p>
-                                <div class="d-flex gap-2">
-                                    <p class="fw-semibold mb-0">Durasi:</p> <p class="mb-0">30 Menit</p>
-                                </div>
-                                <div class="d-flex gap-2">
-                                    <p class="fw-semibold m-0"> Tanggal: </p><p class="m-0">12/12/2023</p>
-                                </div>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>        
         </div>
     </div>
 
 </div>
+<script>
+    const genre = "{{genre}}"
+</script>
 {% endblock content %}
