--- a/chart/templates/listChart.html
+++ b/chart/templates/listChart.html
@@ -7,45 +7,26 @@
         <div class="">
             <h1 class="fw-bold mb-0 ">Chart List</h1>
         </div> 
-        
-        <button type="button" class="btn btn-primary my-3" style="border-radius: 10px; width: 10%;">Kembali</button>
+        <div>
+            <a href="/"></a>
+            <button type="button" class="btn btn-primary my-3" style="border-radius: 10px; width: 10%;">Kembali</button>
+        </div>
         
     </div>
     <div class="d-flex gap-3"> 
+        {% for chart in charts %}
         <div class="card" style="width: 18rem;">
             <div class="card-body d-flex flex-column justify-content-between gap-3">
                 <div class=" fc-primary">
-                    <h2 class="card-title fw-bold">Daily Top 20</h2>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h2 class="card-title fw-bold">{{chart.title}}</h2>
                 </div>
                 <div>
-                    <a href="{% url 'chart:detail_chart' %}">
+                    <a href="/chart/detail/{{chart.id}}">
                     <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 100%;">Lihat Daftar Lagu</button></a>
                 </div>
             </div>
         </div> 
-        <div class="card" style="width: 18rem;">
-            <div class="card-body d-flex flex-column justify-content-between gap-3">
-                <div class=" fc-primary">
-                    <h2 class="card-title fw-bold">Weekly Top 20</h2>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-                <div>
-                    <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 100%;">Lihat Daftar Lagu</button>
-                </div>
-            </div>
-        </div> 
-        <div class="card" style="width: 18rem;">
-            <div class="card-body d-flex flex-column justify-content-between gap-3">
-                <div class="fc-primary">
-                    <h2 class="card-title fw-bold">Top 50 - Indonesia</h2>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-                <div>
-                    <button type="button" class="btn btn-primary m-0" style="border-radius: 10px; width: 100%;">Lihat Daftar Lagu</button>
-                </div>
-            </div>
-        </div> 
+        {% endfor %}
     </div>
 </div>
 {% endblock content %}
