--- a/podcast/templates/listEpisode.html
+++ b/podcast/templates/listEpisode.html
@@ -4,55 +4,42 @@
 {% block content %}
 <div>
     <div class="p-3 rounded w-75 m-auto bg-white fc-primary">
+       
         <div class="pb-3">
             <h1 class="fw-bold">List Episode</h1>
-            <h3 class="fw-bold">Podcast: Stuff You Should Know</h3>
+            <h3 class="fw-bold">Podcast: {{judul_podcast}}</h3>
         </div>
+        {% if episodes %}
         <div>
+            {% for eps in episodes %}
             <div class="card mb-3 fc-primary">
                 <div class="row g-0">
                   <div class="col-md-12">
                     <div class="card-body d-flex justify-content-between gap-5">
                         <div class="w-100">
-                            <h5 class="card-title fw-semibold ">The Hidden World of Subterranean Cities</h5>
-                            <p class="card-text">Dive deep into the earth as we explore the fascinating and mysterious subterranean cities around the world. From the ancient underground city of Derinkuyu in Turkey to the bustling below-surface complex of Montreal.</p>
+                            <h5 class="card-title fw-semibold ">{{eps.judul}}</h5>
+                            <p class="card-text m-0">{{eps.deskripsi}}</p>
                             <div class="d-flex gap-2">
-                                <p class="fw-semibold mb-0">Durasi:</p> <p class="mb-0">52 Menit</p>
+                                <p class="fw-semibold mb-0">Durasi:</p> <p class="mb-0">{{eps.durasi}} Menit</p>
                             </div>
                             <div class="d-flex gap-2">
-                                <p class="fw-semibold"> Tanggal: </p><p>12/12/2023</p>
+                                <p class="fw-semibold"> Tanggal: </p><p>{{eps.tanggal_rilis}}</p>
                             </div>
                         </div>
                         <div>
-                            <button type="button" class="btn btn-red m-0" style="border-radius: 10px; width: 100%;">Hapus</button>
+                            <a href="/podcast/delete-episode/{{eps.id_episode}}">
+                                <button type="button" class="btn btn-red m-0" style="border-radius: 10px; width: 100%;">Hapus</button>
+                            </a>
                         </div>
                     </div>
                   </div>
                 </div>
             </div>
-            <div class="card mb-3 fc-primary">
-                <div class="row g-0">
-                  <div class="col-md-12">
-                    <div class="card-body d-flex justify-content-between gap-5">
-                        <div class="w-100">
-                            <h5 class="card-title fw-semibold ">Decoding the Secrets of Body Language</h5>
-                            <p class="card-text">Join us as we delve into the subtle art of body language. Discover how small gestures can reveal one's true thoughts and feelings. Experts explain how to read common signals and how body language plays a crucial role in communication.</p>
-                            <div class="d-flex gap-2">
-                                <p class="fw-semibold mb-0">Durasi:</p> <p class="mb-0">48 Menit</p>
-                            </div>
-                            <div class="d-flex gap-2">
-                                <p class="fw-semibold"> Tanggal: </p><p>12/12/2023</p>
-                            </div>
-                        </div>
-                        <div>
-                            <button type="button" class="btn btn-red m-0" style="border-radius: 10px; width: 100%;">Hapus</button>
-                        </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-        
+            {% endfor %}        
         </div>
+        {% else %}
+            <p>No Episode Found</p>
+        {% endif %}
     </div>
 
 </div>
