CR LANGGANAN PAKET (2/3)

--- a/user/templates/pembayaran_paket.html
+++ b/user/templates/pembayaran_paket.html
@@ -18,8 +18,8 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1 Bulan</td>
-                            <td>Rp54.900</td>
+                            <td>{{ jenis }}</td>
+                            <td>{{ harga }}</td>
                         </tr>
                     </tbody>
                 </table>
