--- a/user/templates/langganan_paket.html
+++ b/user/templates/langganan_paket.html
@@ -19,7 +19,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Paket {{ jenis }}</h5>
                         <p class="card-text">Rp {{ harga }}</p>
-                        <a href="{% url 'user:pembayaran_paket' %}" class="btn btn-primary">Langganan Sekarang</a>
+                        <a href="{% url 'user:pembayaran_paket' jenis=jenis %}" class="btn btn-primary">Langganan Sekarang</a>
                     </div>
                 </div>
             </div>
