Login dan Register udah (pesan errornya belom dihandle tapi)

--- a/authentication/templates/pilihRegister.html
+++ b/authentication/templates/pilihRegister.html
@@ -11,8 +11,8 @@
             <div class="container-fluid">
                 <div class="row btn-container">
                     <h2>Marmut</h2>
-                    <a href="{% url 'authentication:register' user_type='pengguna' %}" class="btn">Pengguna</a>
-                    <a href="{% url 'authentication:register' user_type='label' %}" class="btn">Label</a>
+                    <a href="{% url 'authentication:register_pengguna' %}" class="btn">Pengguna</a>
+                    <a href="{% url 'authentication:register_label' %}" class="btn">Label</a>
                 </div>
             </div>
         </div>
