--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load filter %}
 
 {% block content %}
 <div class="container-fluid">
@@ -8,32 +9,48 @@
       <img src="/static/assets/images/marmut.png" alt="login" class="login-card-img">
       <h4 class="website_title">Marmut</h4>
     </div>
-    <div class="col-md-8 col-xs-12 col-sm-12 login_form ">
+    <div class="col-md-8 col-xs-12 col-sm-12 login_form">
       <div class="container-fluid">
         <div class="row">
           <h2>Log In</h2>
         </div>
         <div class="row">
-          <form control="" class="form-group">
+          <form method="post" class="form-group">
+            {% csrf_token %}
             <div class="row">
-              <input type="text" name="username" id="username" class="form__input" placeholder="Username">
+              <label>Email</label>
+              <div> {{ login_form.email | addclass:"form__input"}} </div>
             </div>
             <div class="row">
-              <input type="password" name="password" id="password" class="form__input" placeholder="Password">
+              <label>Password</label>
+              <div> {{ login_form.password | addclass:"form__input"}} </div>
             </div>
             <div class="row">
               <div class="row btn-container">
-              <input type="submit" value="Submit" class="btn">
-            </div>
+                <input type="submit" value="Submit" class="btn">
+              </div>
             </div>
           </form>
+          <div class="row">
+          <p>Don't have an account? <a href="{% url 'authentication:pilih_register' %}">Register Here</a></p>
         </div>
-        <div class="row">
-          <p>Don't have an account? <a href="#">Register Here</a></p>
         </div>
       </div>
     </div>
   </div>
 </div>
 
+{% if messages %}
+{% for message in messages %}
+<div id="popup1" class="overlay">
+  <div class="popup">
+    <h2>Login Gagal</h2>
+    <a class="close" href="{% url 'authentication:login' %}">&times;</a>
+    <div class="content">
+      Email atau Password salah! Silahkan coba lagi.
+    </div>
+  </div>
+</div>
+{% endfor %}
+{% endif %}
 {% endblock content %}
