--- a/podcast/templates/listPodcast.html
+++ b/podcast/templates/listPodcast.html
@@ -24,7 +24,9 @@
                             <a href="/podcast/create-episode/{{podcast.id}}">
                                 <button type="button" class="btn btn-blue m-0 mb-2" style="border-radius: 10px; width: 100%;">Tambah Episode</button>
                             </a>
-                            <button type="button" class="btn btn-red m-0" style="border-radius: 10px; width: 100%;">Hapus</button>
+                            <a href="/podcast/delete-podcast/{{podcast.id}}">
+                                <button type="button" class="btn btn-red m-0" style="border-radius: 10px; width: 100%;">Hapus</button>
+                            </a>
                         </div>
                     </div>
                   </div>
