CRUD kelola playlist update

--- a/playlist/templates/addplaylist.html
+++ b/playlist/templates/addplaylist.html
@@ -10,13 +10,13 @@
         <div class="mb-2 row">
             <label class="col-sm-1 col-form-label fw-semibold">Judul</label>
             <div class="col-sm-11">
-                <input class="form-control" type="text" aria-label="default input example">
+                <input class="form-control" type=submit aria-label="default input example">
             </div>
         </div>
         <div class="mb-2 row">
             <label class="col-sm-1 col-form-label fw-semibold">Deskripsi</label>
             <div class="col-sm-11">
-                <input class="form-control" type="text" aria-label="default input example">
+                <input class="form-control" type=submit aria-label="default input example">
             </div>
         </div>
         <div class="row justify-content-center">
