--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -52,7 +52,7 @@
             </div>
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link" href="{% url 'authentication:logout' %}">Logout</a>
             </li>
         </ul>
         </nav>
