--- a/authentication/templates/registerPengguna.html
+++ b/authentication/templates/registerPengguna.html
@@ -59,12 +59,19 @@
 
 {% if messages %}
 {% for message in messages %}
-<div id="popup1" class="overlay">
-    <div class="popup">
-        <h2>Registrasi Gagal</h2>
-        <a class="close" href="{% url 'authentication:login' %}">&times;</a>
-        <div class="content">
-            Email sudah ada! Silahkan coba lagi.
+<div style="background-color: #FAA0A0;" class="relative w-full md:w-4/6 lg:w-3/6 xl:w-2/5 my-6 mx-auto h-full lg:h-auto md:h-auto">
+    <div class="translate h-full lg:h-auto md:h-auto border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-midnight outline-none focus:outline-none">
+        <div class="px-8 py-12 flex flex-col gap-4">
+            <h1 class="text-2xl text-center font-semibold">
+                Registrasi Gagal
+            </h1>
+            <hr class="border-shark-400 w-full">
+            <div class="text-center text-danger">
+                {{ message }}
+                <a class="text-primary-400 hover:underline transition" href="{% url 'authentication:register_pengguna' %}">
+                    Coba Lagi?
+                </a>
+            </div>
         </div>
     </div>
 </div>
