--- a/podcast/templates/createEpisode.html
+++ b/podcast/templates/createEpisode.html
@@ -6,7 +6,7 @@
     <div class="p-3 rounded w-50 m-auto bg-white fc-primary">
         <div class="pb-3">
             <h1 class="fw-bold">Buat Episode</h1>
-            <h3 class="fw-bold">Podcast: Stuff You Should Know</h3>
+            <h3 class="fw-bold">Podcast: {{judul}}</h3>
         </div>
         
         <form method="post" action="/podcast/create-episode/{{ podcast_id }}/">
