--- a/podcast/templates/detailPodcast.html
+++ b/podcast/templates/detailPodcast.html
@@ -25,12 +25,12 @@
                 <p class="fw-semibold mb-0">Tanggal Rilis: </p><p class="m-0">{{tanggal_rilis}}</p>
             </div>
         </div>
-        <button type="button" class="btn btn-primary" style="border-radius: 10px; width: 10%;">Kembali</button>
+        <button type="button" class="btn btn-primary" style="border-radius: 10px; width: 10%;" onclick="goBack()">Kembali</button>
         <div>
             <div>
                 <h3 class="fw-bold">Daftar Episode</h3>
             </div>
-            {% if podcast.episodes %}
+            {% if episodes %}
             <div>
                 {% for eps in episodes %}
                 <div class="card mb-3 fc-primary">
@@ -58,9 +58,10 @@
             {% endif %}     
         </div>
     </div>
-
 </div>
 <script>
-    const genre = "{{genre}}"
+    function goBack() {
+        window.history.back();
+    }
 </script>
 {% endblock content %}
