--- a/podcast/templates/listPodcast.html
+++ b/podcast/templates/listPodcast.html
@@ -7,6 +7,11 @@
         <div class="pb-3">
             <h1 class="fw-bold">List Podcast</h1>
         </div>
+        <div class="pb-3">
+            <a href="/podcast/create-podcast/">
+                <button type="button" class="btn m-0" style="border-radius: 10px; width: 100%;">Tambah Podcast</button>
+            </a>
+        </div>
         <div>
             {% for podcast in podcasts %}
             <div class="card mb-3 fc-primary">
