add downloaded song feature

--- a/song/templates/downloaded_song.html
+++ b/song/templates/downloaded_song.html
@@ -8,7 +8,7 @@
         <div class="row mt-4">
             <div class="col">
                 <h4 class="text-center">Daftar Lagu</h4>
-                <table style="Width:75%", class="table table-bordered table-striped text-center mx-auto">
+                <table style="width:75%;" class="table table-bordered table-striped text-center mx-auto">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" class="col-1">Judul Lagu</th>
@@ -18,25 +18,17 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {% for result in results %}
                         <tr>
-                            <td>Song1</td>
-                            <td>Artist1</td>
-                            <td>20/02/2024</td>
+                            <td>{{ result.0 }}</td>
+                            <td>{{ result.1 }}</td>
+                            <td>{{ result.2|date:"d/m/Y" }}</td>
                             <td>
                                 <a class="text-decoration-none font-weight-bold">Lihat</a>
                                 <a class="text-decoration-none font-weight-bold">Hapus</a>
                             </td>
                         </tr>
-                        <tr>
-                            <td>Song2</td>
-                            <td>Artist2</td>
-                            <td>21/03/2024</td>
-                            <td>
-                                <a class="text-decoration-none font-weight-bold">Lihat</a>
-                                <a class="text-decoration-none font-weight-bold">Hapus</a>
-                            </td>
-                        </tr>
-                        <!-- Other songs -->
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
